--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "url": "git+https://github.com/jxnblk/styled-system.git"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
